--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "author": "Alexander Duerk",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.7.0",
-    "eslint": "^9.7.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^9.1.0",
