--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A RESTFULL Api for Sql",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "test.js"
   },
   "keywords": [
@@ -22,6 +23,12 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.8.0",
+    "nodemon": "^3.1.4",
     "prettier": "^3.3.3"
+  },
+  "dependencies": {
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "path": "^0.12.7"
   }
 }
